# reinforcement_learning_search_from_scratch

./: .gitignore  LICENSE  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: full_validation_guide.md  index.md  references.bib  scripts_reference.md
docs/book/: PDF_COMPILATION_GUIDE.md  README.md  RESUME_DECLUTTER_2025-12-09.md  admonitions.lua  appendix_a_bayesian_preference_models.md  appendix_b_control_theory.md  appendix_c_convex_optimization.md  appendix_d_information_theory.md  appendix_e_vector_morl.md  callouts.lua  crossrefs.lua  declutter_v2.md  declutter_v2_review.md  latex_template.tex  outline.md  pandoc_header.tex  preamble.tex  syllabus.md  syllabus_github.md
docs/knowledge_graph/: .gitignore  FILES_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  README.md  START_HERE.md  TUTORIAL.md  UPDATE_LOG_2025-11-09.md  example_queries.py  graph.yaml  graph.yaml.backup  kg_tools.py  schema.yaml  validate_kg.py  visualize_kg.py
docs/pre-press/: ARCHITECTURE.md  PIPELINE.md  README.md  (+1 more)
pre-press/: ch01.md  ch02.md  ch03.md
pre-submit/: README.md
scripts/: audit_ch00_ch03_alignment.py  build_book_ch00_06_with_labs_and_solutions.sh  build_ch00_06_chapter_bundles.py  ch05_demo.py  detect_unicode_issues.sh  md2tex_preprocess.py  part4_global_comparison.py  prepare_presubmit_ch00_06.sh  sanitize_markdown_for_latex.py  validate_all.py  validate_ch05.py  validate_knowledge_graph.py  verify_ch00_ch06.py
tests/: test_catalog_stats.py  test_template_bandits_rich_est.py
zoosim/: __init__.py
(+267 files in other folders)
